--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<header class="header">
+<!-- <header class="header">
     <a href="#" class="logo">Portfolio</a>
     <nav class="navbar">
         <a href="#home-content" style="--i:1" class="active">Home</a>
@@ -20,9 +20,28 @@
         <a href="#project" style="--i:4">Projects</a>
         <a href="#contact" style="--i:5">Contact</a>
     </nav>
+</header> -->
+
+
+<header class="header">
+  <a href="#" class="logo">Portfolio</a>
+
+  <!-- Burger Menu Icon -->
+  <div class="burger" id="burger">&#9776;</div>
+
+  <!-- Navigation Links -->
+  <nav class="navbar" id="navbar">
+    <a href="#home-content" style="--i:1" class="active">Home</a>
+    <a href="#about" style="--i:2">About</a>
+    <a href="#services" style="--i:3">Skills</a>
+    <a href="#project" style="--i:4">Projects</a>
+    <a href="#contact" style="--i:5">Contact</a>
+  </nav>
 </header>
 
-<section class="home">
+
+
+<section id="home-content" class="home">
     <div class="home-content">
         <h3>Hello, I AM </h3>
         <h1>Thulisa Tembani</h1>
