--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </a>
                     </div> 
                 </section>
-        <!-- <section class="contact" id="contact">
+        <section class="contact" id="contact">
         
         <div class="contact-text">
             
@@ -251,9 +251,9 @@
             <a href="https://github.com/ttembani" target="_blank">
             <i class='bx bxl-github'></i>
       </a>
-             <a href="cv.pdf" download title="Download CV">
+             <!-- <a href="cv.pdf" download title="Download CV">
              <i class='bxr  bx-arrow-down-stroke-circle'></i>
-       </a>
+       </a> -->
 
 
             </div>
@@ -293,34 +293,7 @@
     });
   });
 </script>
-</section> -->
-<div class="contact-container">
-    <!-- Contact Info Card -->
-    <div class="contact-card">
-        <h2>Contact<span> Me</span></h2>
-        <h4>Get in Touch</h4>
-        <p>I would love to hear from you! Whether you have questions, feedback, or collaboration ideas, reach out and let's connect.</p>
-        <ul class="contact-list">
-            <li><i class='bx bxs-send'></i>tembanithulisa2@gmail.com</li>
-        </ul>
-        <div class="contact-icons">
-            <a href="https://www.linkedin.com/in/thulisa-tembani-bb148611a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/ttembani" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="cv.pdf" download title="Download CV"><i class='bx bx-arrow-down-stroke-circle'></i></a>
-        </div>
-    </div>
-
-    <!-- Contact Form Card -->
-    <div class="contact-card">
-        <form action="https://formspree.io/f/mkgrpobl" method="POST">
-            <input type="text" name="name" placeholder="Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="text" name="subject" placeholder="Subject">
-            <textarea name="message" cols="40" rows="10" placeholder="Message" required></textarea>
-            <input type="submit" value="Send" class="send">
-        </form>
-    </div>
-</div>
+</section>
 
 <div class="last-text">
     <p>© 2025 Thulisa Tembani. All rights reserved.</p>
