--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
             <a href="https://github.com/ttembani" target="_blank">
             <i class='bx bxl-github'></i>
       </a>
-             <!-- <a href="cv.pdf" download title="Download CV">
+             <a href="cv.pdf" download title="Download CV">
              <i class='bxr  bx-arrow-down-stroke-circle'></i>
-       </a> -->
+       </a>
 
 
             </div>
