--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
         <p>with 2 years of ICT experience,
             expertise in Website design, Frontend design, and Full stack development.
         </p>
-        <div class="home-sci">
-            <a href="#" style="--i:7"><i class='bx bxl-facebook'></i></a>
-            <a href="#" style="--i:8"><i class='bx bxl-instagram'></i></a>
-            <a href="#" style="--i:10"><i class='bx bxl-tiktok'></i></a>
-        </div>
+        
         <a href="https://github.com/ttembani/Certificates" class="btn-box" target="_blank">
   Certificates
 </a>
@@ -228,7 +224,6 @@
     <p>I would love to hear from you! Whether you have questions, feedback, or collaboration ideas, reach out and let's connect.</p>
         <div class="contact-list">
           <li><i class='bx bxs-send'></i>tembanithulisa2@gmail.com</li>
-          <!-- <li><i class='bx bxs-phone'></i>  0793239699</li>   -->
         </div>
         <!-- Social icons -->
         <div class="contact-icons">
@@ -246,7 +241,7 @@
        
 
 <div class="contact-form">
-<form action="https://formspree.io/f/mkgrpobl" method="POST">       
+<form id="contact-form" action="https://formspree.io/f/mkgrpobl" method="POST">
      <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="subject" placeholder="Subject">
