--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                 </div>
             </div>
             <div class="row">
-                <img src="calculator.png">
+                <img src="eventplanner.png">
                 <div class="layer">
                     <h5>App Design</h5>
-                    <p>A lightweight, responsive calculator built with React, delivering accurate computations with a clean, intuitive interface. Optimized for efficiency and seamless user interaction</p>
+                    <p>A robust event planner app built with Python, Tkinter, and Node.js, designed to manage events, track guests, and generate secure invitations with ease.</p>
                     <a href="https://echo-chat-app-f08h.onrender.com" target="_blank" class="view-link">
                     <i class='bx bx-link-external' style="color: black"></i>
                     </a>
