--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="layer">
                     <h5>App Design</h5>
                     <p>A robust event planner app built with Python, Tkinter, and Node.js, designed to manage events, track guests, and generate secure invitations with ease.</p>
-                    <a href="https://echo-chat-app-f08h.onrender.com" target="_blank" class="view-link">
+                    <a href="https://github.com/ttembani/Event-Planner-App" target="_blank" class="view-link">
                     <i class='bx bx-link-external' style="color: black"></i>
                     </a>
                     </div> 
