--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <h5>Web Design</h5>
                             <p>Crafted with precision using HTML, CSS, and JavaScript, this project showcases seamless design, dynamic interactions, and a user-friendly experience. A testament to modern web development and creative functionality.</p>
                          
-                            <a href="https://ttembani.github.io/capaciti-grp-project_fix-it/" target="_blank">
+                            <a href="https://fixitsevices.netlify.app/" target="_blank">
                                 <i class='bx bx-link-external' style="color: black"></i>
                               </a>
                         </div>
